--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ branches:
     # We'll also build whenever there is a new commit on any branch starting with `features/`
     - /features\/.+/
 build_script:
-  - ps: .\build.ps1
+  - ps: .\build.ps1 -pack
 assembly_info:
   # There is nothing to version except the `GitHub` release
   patch: false
@@ -30,9 +30,20 @@ deploy:
       # Encrypted `GitHub` `PAT`
       # https://www.appveyor.com/docs/deployment/github/#provider-settings
       secure: AmCNluoUjQddLCZrNghd0XjLwFhrofDMF7UTdmJDLuK5g/+FKGfBr6IOIbN3hrRw
-    artifact: transform
+    artifact: transform,packages
     draft: false
     prerelease: false
+    on:
+      branch: master
+  - provider: NuGet
+    server: https://www.nuget.org/api/v2/package
+    api_key:
+      # Encrypted `NuGet.org` token - https://www.nuget.org/account/ApiKeys
+      # https://www.appveyor.com/docs/deployment/nuget/#provider-settings
+      secure: IFDjCibNCjADjEU1fMIu+O8Jhe0Q4dBMM58kT3muEMISJLYEZlCTDpZ5y4WtdPIs
+    skip_symbols: false
+    symbol_server: https://nuget.smbsrc.net/
+    artifact: packages
     on:
       branch: master
   - provider: GitHub
@@ -42,9 +53,20 @@ deploy:
       # Encrypted `GitHub` `PAT`
       # https://www.appveyor.com/docs/deployment/github/#provider-settings
       secure: AmCNluoUjQddLCZrNghd0XjLwFhrofDMF7UTdmJDLuK5g/+FKGfBr6IOIbN3hrRw
-    artifact: transform
+    artifact: transform,packages
     draft: false
     prerelease: true
+    on:
+      branch: /features\/.+/
+  - provider: NuGet
+    server: https://www.myget.org/F/gabrielweyer-pre-release/api/v2/package
+    api_key:
+      # Encrypted `MyGet` token - https://www.myget.org/profile/Me#!/AccessTokens
+      # https://www.appveyor.com/docs/deployment/nuget/#provider-settings
+      secure: 5LLnFMrZETquTfl10cGML5CoozXgD0ULTWLlSjsi/oQi0XN0beUPM3O7Nsz8AK/d
+    skip_symbols: false
+    symbol_server: https://www.myget.org/F/gabrielweyer-pre-release/symbols/api/v2/package
+    artifact: packages
     on:
       branch: /features\/.+/
 # Environment variables
