--- a/src/xUnitToJUnit/xUnitToJUnit.nuspec
+++ b/src/xUnitToJUnit/xUnitToJUnit.nuspec
@@ -11,6 +11,7 @@
     </metadata>
     <files>
         <file src="bin\Release\netcoreapp2.0\*.dll" target="tools" />
+        <file src="bin\Release\netcoreapp2.0\*.runtimeconfig.json" target="tools" />
         <file src="bin\Release\netcoreapp2.0\*.pdb" target="tools" />
         <file src="bin\Release\netcoreapp2.0\*.xslt" target="tools" />
     </files>
