--- a/src/xUnitToJUnit/xUnitToJUnit.csproj
+++ b/src/xUnitToJUnit/xUnitToJUnit.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RuntimeFrameworkVersion>2.0.4</RuntimeFrameworkVersion>
     <AssemblyName>xunit-to-junit</AssemblyName>
     <NuspecFile>xUnitToJUnit.nuspec</NuspecFile>
   </PropertyGroup>
