Insert final new line

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,7 @@ root = true
 
 [*]
 end_of_line = CRLF
+insert_final_newline = true
 
 [*.{cs,ps1}]
 indent_style = space
@@ -13,3 +14,6 @@ indent_size = 4
 [*.{xml,csproj,xslt}]
 indent_style = space
 indent_size = 2
+
+[*.xml]
+insert_final_newline = false
