Build hotfix/* branches too

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,5 +1,8 @@
 branches:
   feature:
     mode: ContinuousDeployment
+  hotfix:
+    mode: ContinuousDeployment
+    tag: useBranchName
 ignore:
   sha: []
