--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,9 @@ branches:
     - /features\/.+/
     - /hotfix\/.+/
 build_script:
-  - ps: .\build.ps1 -pack
+  - ps: |
+      dotnet cake build.cake --bootstrap
+      dotnet cake build.cake --pack
 assembly_info:
   # There is nothing to version except the `GitHub` release
   patch: false
@@ -76,12 +78,8 @@ environment:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 # `install` will run before `build_script`
 install:
-  # `dotnet-install.ps1` is available at: https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-install-script
-  # `Cake.dll` is targeting `.NET Core` `1.0.9`, so we need to install the latest `1.0.x` runtime
-  # The runtime is required to run a `.NET Core` application, it's part of the `SDK`
-  # https://github.com/dotnet/core/blob/master/release-notes/download-archive.md
-  - ps: .\setup\dotnet-install.ps1 -SharedRuntime -Version 1.0.9
   # `XsltTests` is targeting `netcoreapp2.1`, so we can safely install the latest `SDK`
   # The `SDK` is required to restore, build, publish... a `.NET Core` application
   # https://www.microsoft.com/net/download/windows
   - ps: .\setup\dotnet-install.ps1 -Channel Current
+  - ps: dotnet tool install --global Cake.Tool --version 0.31.0
