Remove support for .NET Core 2.1
.NET Core 2.1 is not supported any more since August 21, 2021.

--- a/src/xUnitToJUnit/xUnitToJUnit.csproj
+++ b/src/xUnitToJUnit/xUnitToJUnit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <AssemblyName>dotnet-xunit-to-junit</AssemblyName>
     <PackAsTool>true</PackAsTool>
     <PackageId>dotnet-xunit-to-junit</PackageId>
