Rename main branch

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ init:
   - git config --global core.autocrlf true
 branches:
   only:
-    - master
+    - main
     # We'll also build whenever there is a new commit on any branch starting with `features/` or `hotfix/`
     - /features\/.+/
     - /hotfix\/.+/
@@ -37,7 +37,7 @@ deploy:
     draft: false
     prerelease: false
     on:
-      branch: master
+      branch: main
   - provider: NuGet
     server: https://www.nuget.org/api/v2/package
     api_key:
@@ -48,7 +48,7 @@ deploy:
     symbol_server: https://www.nuget.org/api/v2/symbolpackage
     artifact: packages
     on:
-      branch: master
+      branch: main
   - provider: GitHub
     # By convention release versions start with `v`
     release: v$(APPVEYOR_BUILD_VERSION)
