Install .NET SDK in expected AppVeyor directory

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -70,5 +70,5 @@ install:
   # `XsltTests` is targeting `net6.0`, so we can safely install the latest `SDK`
   # The `SDK` is required to restore, build, publish... a `.NET Core` application
   # https://www.microsoft.com/net/download/windows
-  - ps: .\setup\dotnet-install.ps1 -Channel Current
+  - ps: .\setup\dotnet-install.ps1 -Channel Current -InstallDir 'C:\Program Files\dotnet\'
   - ps: dotnet tool restore
