--- a/src/xUnitToJUnit/xUnitToJUnit.csproj
+++ b/src/xUnitToJUnit/xUnitToJUnit.csproj
@@ -3,6 +3,8 @@
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
     <AssemblyName>dotnet-xunit-to-junit</AssemblyName>
+    <LangVersion>latest</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
     <PackAsTool>true</PackAsTool>
     <PackageId>dotnet-xunit-to-junit</PackageId>
     <Authors>Gabriel Weyer</Authors>
