Add license to package

--- a/src/xUnitToJUnit/xUnitToJUnit.csproj
+++ b/src/xUnitToJUnit/xUnitToJUnit.csproj
@@ -14,6 +14,7 @@
     <PackageTags>xUnit JUnit CircleCI</PackageTags>
     <PackageProjectUrl>https://github.com/gabrielweyer/xunit-to-junit</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright © xUnitToJUnit contributors</Copyright>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <IncludeSymbols>true</IncludeSymbols>
