--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,13 @@ on:
   push:
     branches:
       - main
-      - 'features/**'
+    paths-ignore:
+      - .editorconfig
+      - LICENSE
+      - README.md
+  pull_request:
+    branches:
+      - main
     paths-ignore:
       - .editorconfig
       - LICENSE
