--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,37 +27,39 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Install latest .NET SDK
-        run: ./build/dotnet-install.sh
-      - name: Restore .NET tools
-        run: dotnet tool restore
       - name: Build
-        run: |
-          dotnet cake build.cake --bootstrap
-          dotnet cake build.cake --pack
+        run: ./build.sh --package
       - name: Upload NuGet packages
         uses: actions/upload-artifact@v2
         with:
           name: packages
           path: ./artifacts/packages
+          if-no-files-found: error
       - name: Upload XSLT transform
         uses: actions/upload-artifact@v2
         with:
           name: transform
           path: ./src/JUnit.xslt
+          if-no-files-found: error
       - name: Upload dotnet test results
         uses: actions/upload-artifact@v2
         with:
           name: tests-results
-          path: ./artifacts/test-results/*.trx
+          path: ./artifacts/test-results/**/*.html
+          if-no-files-found: error
         if: ${{ always() }}
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage
+          path: ./artifacts/coverage-report
       - name: Report test results
         uses: dorny/test-reporter@v1.5.0
         continue-on-error: true
         if: ${{ always() }}
         with:
           name: Test results
-          path: 'artifacts/test-results/*.trx'
+          path: 'artifacts/test-results/**/*.trx'
           reporter: dotnet-trx
       - name: Determine if we're skipping release on feature Pull Request
         if: ${{ env.IS_FEATURE_PULL_REQUEST == 'true' }}
