--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
     paths-ignore:
+      - '.github/workflows/build.yml'
       - .editorconfig
       - LICENSE
       - README.md
@@ -11,6 +12,7 @@ on:
     branches:
       - main
     paths-ignore:
+      - '.github/workflows/build.yml'
       - .editorconfig
       - LICENSE
       - README.md
