--- a/tests/XsltTests/XsltTests.csproj
+++ b/tests/XsltTests/XsltTests.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
+    <RootNamespace>Gabo.DotNet.xUnitToJUnit.Tests</RootNamespace>
+    <AssemblyName>Gabo.DotNet.xUnitToJUnit.Tests</AssemblyName>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <IsPackable>false</IsPackable>
