--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths-ignore:
-      - '.github/workflows/build.yml'
+      - .github/workflows/skipped-build.yml
       - .editorconfig
       - LICENSE
       - README.md
@@ -12,7 +12,7 @@ on:
     branches:
       - main
     paths-ignore:
-      - '.github/workflows/build.yml'
+      - .github/workflows/skipped-build.yml
       - .editorconfig
       - LICENSE
       - README.md
