--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/setup-dotnet@v3
+        name: Install .NET Core 3.1
+        with:
+          dotnet-version: '3.1.x'
       - name: Build
         run: ./build.sh --package
       - name: Upload NuGet packages
