--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,10 @@ jobs:
         name: Install .NET Core 3.1
         with:
           dotnet-version: '3.1.x'
+      - uses: actions/setup-dotnet@v3
+        name: Install .NET 5
+        with:
+          dotnet-version: '5.x'
       - name: Build
         run: ./build.sh --package
       - name: Upload NuGet packages
