--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ insert_final_newline = true
 [*.cs]
 indent_size = 4
 
-[*.{xml,csproj,xslt}]
+[*.{xml,csproj,xslt,props}]
 indent_size = 2
 
 [*.xml]
