Use Microsoft code quality rules

--- a/src/xUnitToJUnit/xUnitToJUnit.csproj
+++ b/src/xUnitToJUnit/xUnitToJUnit.csproj
@@ -21,7 +21,7 @@
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <NoWarn>CS7035</NoWarn>
+    <NoWarn>CS7035;CA1303</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="Gabo.DotNet.xUnitToJUnit.Tests" />
