--- a/tests/XsltTests/XsltTests.csproj
+++ b/tests/XsltTests/XsltTests.csproj
@@ -7,7 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
-    <NoWarn>CS7035</NoWarn>
+    <NoWarn>CS7035;CA1707</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Using Include="FluentAssertions" />
