Use Meziantou analyzers

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,5 +22,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
+    <GlobalPackageReference Include="Meziantou.Analyzer" Version="2.0.3" />
   </ItemGroup>
 </Project>
