--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -24,5 +24,6 @@
     </PackageVersion>
     <GlobalPackageReference Include="Meziantou.Analyzer" Version="2.0.3" />
     <GlobalPackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.27" />
+    <GlobalPackageReference Include="AsyncFixer" Version="1.6.0" />
   </ItemGroup>
 </Project>
