--- a/tests/XsltTests/XsltTests.csproj
+++ b/tests/XsltTests/XsltTests.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.analyzers" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="input/*.xml">
