--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,7 +12,9 @@
     <PackageVersion Include="FluentAssertions" Version="6.11.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
     <PackageVersion Include="xunit" Version="2.5.0" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.0" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.3" Condition="'$(TargetFramework)' == 'netcoreapp3.1'" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.3" Condition="'$(TargetFramework)' == 'net5.0'" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.0" Condition="'$(TargetFramework)' == 'net6.0'" />
     <GlobalPackageReference Include="Meziantou.Analyzer" Version="2.0.80" />
     <GlobalPackageReference Include="AsyncFixer" Version="1.6.0" />
     <GlobalPackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.6.40" />
