--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,8 +13,7 @@
     <PackageVersion Include="GitHubActionsTestLogger" Version="2.3.3" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageVersion Include="xunit" Version="2.6.1" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.3" Condition="'$(TargetFramework)' == 'netcoreapp3.1'" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.3" Condition="'$(TargetFramework)' != 'netcoreapp3.1'" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.3" />
     <GlobalPackageReference Include="AsyncFixer" Version="1.6.0" />
     <GlobalPackageReference Include="Meziantou.Analyzer" Version="2.0.106" />
     <GlobalPackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.7.30" />
