--- a/src/xUnitToJUnit/xUnitToJUnit.csproj
+++ b/src/xUnitToJUnit/xUnitToJUnit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <RootNamespace>Gabo.DotNet.xUnitToJUnit</RootNamespace>
     <AssemblyName>dotnet-xunit-to-junit</AssemblyName>
     <LangVersion>latest</LangVersion>
